Bug 181203 - crash when closing import window
Summary: crash when closing import window
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Import-IconView (other bugs)
Version First Reported In: 0.10.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-18 18:45 UTC by Tommaso Schiavinotto
Modified: 2017-08-16 12:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tommaso Schiavinotto 2009-01-18 18:45:59 UTC
Version:           svn (after 10.0 beta8) (using KDE 4.1.3)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Ubuntu Packages

I inserted a Compact Flash in the reader, and tried to import it.
The first time the thumnails were not generated and I've got a dialog telling me that it could not read the images (one dialog for image), when I tried to close the CameraGUI window (through the window manager) Digikam crashed.

I tried a second time, thumbnails where generated, I downloaded the images and
then I closed the window (through the window manager) Digikam crashed again.

Here the backtrace:
#6  0x00000000 in ?? ()
#7  0x08165179 in Digikam::CameraUI::qt_metacall (this=0xc5953b8, 
    _c=QMetaObject::InvokeMetaMethod, _id=41, _a=0xbffda7dc)
    at /home/tommaso/digicomp/svn/graphics/build/digikam/digikam/cameraui.moc:210
#8  0xb6a51a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#9  0xb6a527e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0x0813f6c7 in Digikam::CameraIconView::signalSelected (this=0xca55240, 
    _t1=0x0, _t2=false)
    at /home/tommaso/digicomp/svn/graphics/build/digikam/digikam/cameraiconview.moc:136
#11 0x0813f747 in Digikam::CameraIconView::slotSelectionChanged (
    this=0xca55240)
    at /home/tommaso/digicomp/svn/graphics/digikam/utilities/cameragui/cameraiconview.cpp:579
#12 0x0813f8bd in Digikam::CameraIconView::qt_metacall (this=0xca55240, 
    _c=QMetaObject::InvokeMetaMethod, _id=10, _a=0xbffda8a8)
    at /home/tommaso/digicomp/svn/graphics/build/digikam/digikam/cameraiconview.moc:114
#13 0xb6a51a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#14 0xb6a527e2 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#15 0x082a59ad in Digikam::IconView::signalSelectionChanged (this=0xca55240)
    at /home/tommaso/digicomp/svn/graphics/build/digikam/digikam/iconview.moc:122
#16 0x082a8b8d in Digikam::IconView::clear (this=0xca55240, update=true)
    at /home/tommaso/digicomp/svn/graphics/digikam/digikam/iconview.cpp:374
#17 0x0813d6ac in ~CameraIconView (this=0xca55240)
    at /home/tommaso/digicomp/svn/graphics/digikam/utilities/cameragui/cameraiconview.cpp:276
#18 0x081637c5 in ~CameraUI (this=0xc5953b8)
    at /home/tommaso/digicomp/svn/graphics/digikam/utilities/cameragui/cameraui.cpp:168
#19 0xb6a4adec in qDeleteInEventHandler () from /usr/lib/libQtCore.so.4
#20 0xb6a4c7a3 in QObject::event () from /usr/lib/libQtCore.so.4
#21 0xb59f6004 in QWidget::event () from /usr/lib/libQtGui.so.4
#22 0xb5d4a517 in QMainWindow::event () from /usr/lib/libQtGui.so.4
#23 0xb71f0958 in KMainWindow::event () from /usr/lib/libkdeui.so.5
#24 0xb723415c in KXmlGuiWindow::event () from /usr/lib/libkdeui.so.5
#25 0xb599e8ec in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#26 0xb59a67fa in QApplication::notify () from /usr/lib/libQtGui.so.4
#27 0xb711eb2d in KApplication::notify () from /usr/lib/libkdeui.so.5
#28 0xb6a3ce61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#29 0xb6a3dae5 in QCoreApplicationPrivate::sendPostedEvents ()
   from /usr/lib/libQtCore.so.4
#30 0xb6a3dcdd in QCoreApplication::sendPostedEvents ()
   from /usr/lib/libQtCore.so.4
#31 0xb6a6782f in ?? () from /usr/lib/libQtCore.so.4
#32 0xb4f026f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#33 0xb4f05da3 in ?? () from /usr/lib/libglib-2.0.so.0
#34 0xb4f05f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#35 0xb6a67478 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#36 0xb5a38ea5 in ?? () from /usr/lib/libQtGui.so.4
#37 0xb6a3b52a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#38 0xb6a3b6ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#39 0xb6a3dda5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#40 0xb599e767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#41 0x082f4da2 in main (argc=1, argv=0xbffdb584)
    at /home/tommaso/digicomp/svn/graphics/digikam/digikam/main.cpp:188
#0  0xb80db430 in __kernel_vsyscall ()
Comment 1 Marcel Wiesweg 2009-01-18 21:25:41 UTC
SVN commit 913128 by mwiesweg:

Fix crash produces with the intention to fix another crash.
Thanks for quick beta testing ;-)

BUG: 181203

 M  +2 -1      cameraui.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=913128