Fix crash produces with the intention to fix another crash. Thanks for quick beta testing ;-)

BUG: 181203

svn path=/trunk/extragear/graphics/digikam/; revision=913128